// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a changelog with breaking changes 1`] = `
"## [2.0.0](https://github.com/vitejs/test/compare/v1.0.0...v2.0.0) (yyyy-mm-dd)
### ⚠ BREAKING CHANGES

* introduce breaking change ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))

### Features

* introduce breaking change ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))

### Bug Fixes

* fix a bug ([#1](https://github.com/vitejs/test/issues/1)) ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
## 1.0.0 (yyyy-mm-dd)
### Miscellaneous Chores

* initial commit ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
"
`;

exports[`generates a changelog with commits 1`] = `
"## <small>[1.0.1](https://github.com/vitejs/test/compare/v1.0.0...v1.0.1) (yyyy-mm-dd)</small>
### Bug Fixes

* fix a bug ([#1](https://github.com/vitejs/test/issues/1)) ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
## 1.0.0 (yyyy-mm-dd)
### Miscellaneous Chores

* initial commit ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
"
`;

exports[`generates a changelog with commits 2`] = `
"## [1.1.0](https://github.com/vitejs/test/compare/v1.0.1...v1.1.0) (yyyy-mm-dd)
### Features

* add new feature ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
## <small>[1.0.1](https://github.com/vitejs/test/compare/v1.0.0...v1.0.1) (yyyy-mm-dd)</small>
### Bug Fixes

* fix a bug ([#1](https://github.com/vitejs/test/issues/1)) ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
## 1.0.0 (yyyy-mm-dd)
### Miscellaneous Chores

* initial commit ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
"
`;

exports[`generates a new changelog for empty project 1`] = `
"## 1.0.0 (yyyy-mm-dd)
### Miscellaneous Chores

* initial commit ([xxxxxxx](https://github.com/vitejs/test/commit/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx))
"
`;
